tests/ui/zeroize/zeroize.stderr
error: `Zeroize` doesn't support this option
 --> tests/ui/zeroize/zeroize.rs:7:24
  |
7 | #[derive_where(Zeroize(test))]
  |                        ^^^^

error: `Zeroize` doesn't support this option
  --> tests/ui/zeroize/zeroize.rs:10:24
   |
10 | #[derive_where(Zeroize(test = "test"))]
   |                        ^^^^

error: expected path
  --> tests/ui/zeroize/zeroize.rs:13:24
   |
13 | #[derive_where(Zeroize("option"))]
   |                        ^^^^^^^^

error: unexpected option syntax
  --> tests/ui/zeroize/zeroize.rs:16:24
   |
16 | #[derive_where(Zeroize(crate(zeroize_)))]
   |                        ^^^^^^^^^^^^^^^

error: expected path, expected identifier
  --> tests/ui/zeroize/zeroize.rs:19:32
   |
19 | #[derive_where(Zeroize(crate = "struct Test"))]
   |                                ^^^^^^^^^^^^^

error: duplicate `crate` option
  --> tests/ui/zeroize/zeroize.rs:22:44
   |
22 | #[derive_where(Zeroize(crate = "zeroize_", crate = "zeroize_"))]
   |                                            ^^^^^^^^^^^^^^^^^^

error: unnecessary path qualification, `::zeroize` is used by default
  --> tests/ui/zeroize/zeroize.rs:25:32
   |
25 | #[derive_where(Zeroize(crate = "::zeroize"))]
   |                                ^^^^^^^^^^^
